# AI-Resume-Screening-System

./: Makefile  README.md
backend/: alembic.ini  main.py  pyproject.toml  requirements.txt
backend/agents/: interview_agent.py  report_agent.py  state.py
backend/alembic/: env.py
backend/alembic/versions/: 0002_phase2_pgvector.py  0003_phase4_agents.py
backend/api/: deps.py
backend/api/v1/: analytics.py  auth.py  candidates.py  health.py  interview_questions.py  jobs.py  reports.py  resumes.py  router.py  tasks.py  users.py
backend/core/: config.py  exceptions.py  logging_config.py  middleware.py  security.py
backend/database/: engine.py  session.py
backend/database/models/: __init__.py  audit_log.py  candidate.py  candidate_job.py  interview_question.py  job.py  job_task.py  refresh_token.py  report.py  resume.py  user.py
backend/embeddings/: base.py  factory.py  nomic_embed.py  sentence_transformer.py
backend/llms/: base.py  groq_client.py  ollama_client.py  router.py
backend/matching/: education_matcher.py  engine.py  experience_matcher.py  ranker.py  schemas.py  skill_matcher.py
backend/resume/: extractor.py  normalizer.py  parser.py  pipeline.py  schemas.py
backend/services/: analytics_service.py  audit_service.py  auth_service.py  candidate_service.py  interview_service.py  job_service.py  ranking_service.py  report_service.py  resume_service.py  scoring_context.py  user_service.py
backend/storage/: base.py  local.py
backend/tests/: conftest.py
backend/vectorstore/: base.py  factory.py  faiss_store.py  pgvector_store.py
docs/: API.md  (+3 more)
(+85 files in other folders)
